# ROS_Repository

ETC/: index.html
ROS_web/: index.html
class0_ROS_Beginng/ros_begin/: CMakeLists.txt  package.xml
class0_ROS_Beginng/ros_begin/src/: simple.py
class0_ROS_Beginng/ros_begin_c/: CMakeLists.txt  package.xml
class0_ROS_Beginng/ros_begin_c/src/: simple.cpp
class1_ROS_Basic/act_sercli_example_pkg/: CMakeLists.txt  package.xml
class1_ROS_Basic/act_sercli_example_pkg/src/: simple_action_client_no_wait.py  simple_action_client_wait.py  simple_action_server.py
class1_ROS_Basic/act_sercli_example_pkg_c/: CMakeLists.txt  package.xml
class1_ROS_Basic/act_sercli_example_pkg_c/src/: simple_action_client_no_wait.cpp  simple_action_client_wait.cpp  simple_action_server.cpp
class1_ROS_Basic/custom_messages/: CMakeLists.txt  package.xml
class1_ROS_Basic/custom_messages/action/: Counter.action
class1_ROS_Basic/custom_messages/msg/: Custom_topic.msg
class1_ROS_Basic/debug_example_pkg/: CMakeLists.txt  package.xml
class1_ROS_Basic/pubsub_example_pkg/: CMakeLists.txt  package.xml
class1_ROS_Basic/pubsub_example_pkg/scripts/: simple_topic_publisher.py  simple_topic_subcriber.py
class1_ROS_Basic/pubsub_example_pkg_c/: CMakeLists.txt  package.xml
class1_ROS_Basic/pubsub_example_pkg_c/src/: simple_topic_publisher.cpp  simple_topic_subscriber.cpp
class1_ROS_Basic/sercli_example_pkg/: CMakeLists.txt  package.xml
class1_ROS_Basic/sercli_example_pkg/scripts/: simple_service_client.py  simple_service_server.py
class1_ROS_Basic/sercli_exmaple_pkg_c/: CMakeLists.txt  package.xml
class1_ROS_Basic/sercli_exmaple_pkg_c/src/: simple_service_client.cpp  simple_service_server.cpp
class2_ROS_URDF/box_boxer/box_boxer_description/: CMakeLists.txt  package.xml
class2_ROS_URDF/box_boxer/box_boxer_description/config/: box_boxer.yaml
class2_ROS_URDF/box_boxer/box_boxer_description/launch/: box_boxer_control.launch  box_boxer_spawn.launch
class2_ROS_URDF/box_boxer/box_boxer_description/meshes/: Atribution_Meshes.rst  face_1.dae  face_2.dae  face_3.dae  face_4.dae  gloves_1_L.dae  gloves_1_R.dae
class2_ROS_URDF/box_boxer/box_boxer_description/meshes/mech_drone/: body_chest.dae  hip.dae  industrialbase.dae  joint.dae  joint.stl  piston.dae
class2_ROS_URDF/box_boxer/box_boxer_description/meshes/robert/: robert.stl
class2_ROS_URDF/box_boxer/box_boxer_description/robot/: box_boxer.gazebo  box_boxer.xacro  box_boxer_body.xacro  box_boxer_gloves.xacro  box_boxer_head.xacro  materials.xacro  properties.xacro  sensors.gazebo
class2_ROS_URDF/box_boxer/box_boxer_gazebo/: CMakeLists.txt  package.xml
class2_ROS_URDF/box_boxer/box_boxer_gazebo/launch/: main.launch  main_combat.launch  robot_spawn.launch  start_world.launch
class2_ROS_URDF/box_boxer/box_boxer_gazebo/models/bag/: model.config  model.sdf
class2_ROS_URDF/box_boxer/box_boxer_gazebo/models/bag/meshes/: bag.stl
class2_ROS_URDF/box_boxer/box_boxer_gazebo/rviz/: box_boxer.rviz
class2_ROS_URDF/box_boxer/box_boxer_gazebo/worlds/: box_bot_empty.world
class2_ROS_URDF/first_urdf_pkg/: CMakeLists.txt  package.xml
class2_ROS_URDF/first_urdf_pkg/launch/: first_model_visualize.launch  second_model_visualize copy.launch  third_model_visualize.launch
class2_ROS_URDF/first_urdf_pkg/launch/gazebo/: fourth_model_control.launch  second_model_control.launch  spawn_xacro.launch  start_first_spawn_urdf.launch  start_fourth_spawn_xacro.launch  start_second_spawn_urdf.launch  start_third_spawn_urdf.launch  start_virtual_world.launch  third_gazebo_model_visualize.launch  third_model_control.launch
class2_ROS_URDF/first_urdf_pkg/models/urdf_course_meshes/jibo/: jibo.sdf  model.config
class2_ROS_URDF/first_urdf_pkg/models/urdf_course_meshes/jibo/meshes/: jibo_final_parts_base.dae  jibo_final_parts_base_v2.dae  jibo_final_parts_base_v3.dae  jibo_final_parts_body.dae  jibo_final_parts_body_v2.dae  jibo_final_parts_body_v3.dae  jibo_final_parts_head.dae  jibo_final_parts_head_v2.dae  jibo_final_parts_head_v3.dae  jibo_final_parts_head_v4.dae  jibo_final_parts_head_v5.dae  jibo_final_parts_waist.dae  jibo_final_parts_waist_v2.dae  jibo_final_parts_waist_v2bis.dae  jibo_final_parts_waist_v3.dae
class2_ROS_URDF/first_urdf_pkg/robot/: fourth_model.urdf  fourth_model.xacro
class2_ROS_URDF/first_urdf_pkg/rviz_config/: first_rviz_config.rviz  gazebo.rviz
class2_ROS_URDF/first_urdf_pkg/scripts/: delete_model.py  model_move.py
class2_ROS_URDF/first_urdf_pkg/urdf/: first_gazebo_model.urdf  first_model.urdf  second_gazebo_mode.urdf  second_model.urdf  third_gazebo_model.urdf  third_model.urdf
class3_ROS_TF/first_tf_pkg/: CMakeLists.txt  package.xml
class3_ROS_TF/first_tf_pkg/launch/: start_first_spawn_urdf.launch  start_rviz.launch
class3_ROS_TF/first_tf_pkg/rviz_config/: first_rviz_config.rviz
class3_ROS_TF/first_tf_pkg/src/: listener_broadcaster.py
class3_ROS_TF/first_tf_pkg/urdf/: test_bot.urdf  test_bot_rviz.urdf
class4_sensor_fuse/: CMakeLists.txt  package.xml
class4_sensor_fuse/config/: costmap_common.yaml  costmap_local.yaml  ekf_localization.yaml
class4_sensor_fuse/launch/: move_base_map.launch  rviz.launch  start_amcl_localization.launch  start_ekf_localization.launch  start_mapping.launch
class4_sensor_fuse/maps/: my_map1.pgm  my_map1.yaml
class4_sensor_fuse/rviz_config/: first_rviz_config.rviz
turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.gazebo.xacro
turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_house.launch
